tests/miniJava/pos/001312_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( true ) System.out.println ( { } ) ; } }
