tests/miniJava/neg/006807_mutation.MiniJava
class { public static void Main ( String [ ] java ) { { } } }
